feat: move getting of encoding type to per event/message
