# backend/docs/swagger.json
@@ -70,20 +70,6 @@
                     },
                     {
                         "type": "string",
-                        "description": "Key encoding (json, plaintext, base64)",
-                        "name": "keyEncoding",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Message encoding (json, plaintext, base64)",
-                        "name": "messageEncoding",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "description": "Page size",
                         "name": "pageSize",
                         "in": "path",
@@ -237,11 +223,13 @@
             "type": "string",
             "enum": [
                 "json",
-                "string"
+                "string",
+                "consumerOffset"
             ],
             "x-enum-varnames": [
                 "JSONPayload",
-                "StringPayload"
+                "StringPayload",
+                "ConsumerOffsetPayload"
             ]
         },
         "model.RetentionMs": {
